--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.6",
     "nodemon": "^2.0.20"
   },
